# RAL-Bench

./: Audio secret  None  README.md  Short msg  exif secret bytes
Exp1/claude-3.7-sonnet-20250219-thinking/: claude-3-7-sonnet-20250219-thinking__gen_and_eval.xlsx
Exp1/claude-4.5-sonnet/generation/Mitmproxy/: README.md  pyproject.toml  setup.py
Exp1/claude-4.5-sonnet/generation/Mitmproxy/mitmproxy/: __init__.py  addonmanager.py  flow.py  http.py  master.py  options.py
Exp1/claude-4.5-sonnet/generation/Mitmproxy/mitmproxy/tools/: __init__.py  cmdline.py  dump.py  main.py
Exp1/deepseek-r1/: deepseek-r1__gen_and_eval.xlsx
Exp1/deepseek-v3.2/: deepseek-v3.2__gen_and_eval.xlsx
Exp1/gemini-2.5-pro/: gemini-2.5-pro__gen_and_eval.xlsx
Exp1/gemini-2.5-pro-thinking/: gemini-2.5-pro-thinking__gen_and_eval.xlsx
Exp1/gemini-2.5-pro-thinking/generation/Mailpile/: README.md  pyproject.toml
Exp1/gemini-2.5-pro-thinking/generation/Mailpile/benchmarks/: __init__.py  benchmark_all.py
Exp1/gemini-2.5-pro-thinking/generation/Mailpile/mailpile/: __init__.py  i18n.py  safe_popen.py  util.py  vcard.py
Exp1/gemini-2.5-pro-thinking/generation/Mailpile/tests/: test_i18n.py  test_safe_popen.py  test_util.py  test_vcard.py
Exp1/gemini-3-pro-preview/: gemini-3-pro-preview__gen_and_eval.xlsx
Exp1/gpt-5.2/generation/Glances/: README.md  pyproject.toml
Exp1/gpt-5.2/generation/Glances/src/glances/: __about__.py  __init__.py  cli.py  csvout.py  metrics.py
Exp1/o1/: o1__gen_and_eval.xlsx
Exp1/o3/: o3-2025-04-16__gen_and_eval.xlsx
Exp2/: plot_left.py  plot_right.py  step1_build_dataset.py  step1_build_failure_dataset_group3.py  step2_build_tables.py  step2_build_tables_group3.py  step3_plot.py
Exp2/rq2_out/: RQ2_all_cases.csv  RQ2_failure_cases.jsonl  RQ2_failure_cases_group3.csv  RQ2_model_x_group3_counts.csv  RQ2_model_x_group3_pct.csv  RQ2_model_x_type_counts.csv  RQ2_model_x_type_pct.csv  RQ2_overall_group3_dist.csv  RQ2_overall_type_dist.csv
Exp4/: gpt-5.2__s1__gen_and_eval.xlsx  gpt-5.2__s2__gen_and_eval.xlsx  gpt-5.2__s3__gen_and_eval.xlsx  rq.xlsx
Exp4/generation_s1/Fail2ban/: README.txt  _m1_fix_raw_model_output.txt  _m1_plan.txt  _m1_plan_raw.txt  _m1_raw_model_output.txt  _m1_status.txt  pyproject.toml
Exp4/generation_s1/Fail2ban/_agent_tests/: test_cli_stubs.py  test_config_reader.py  test_fail2ban_regex_cli.py  test_filter_ip.py  test_jail_basic.py
Exp4/generation_s1/Fail2ban/config/: jail.conf
Exp4/generation_s1/Fail2ban/fail2ban/server/: __init__.py  actions.py  configreader.py  filter.py  jail.py  ticket.py
Exp4/generation_s1/Glances/: README.md  _m1_plan.txt  _m1_plan_raw.txt  _m1_raw_model_output.txt  pyproject.toml
Exp4/generation_s1/Glances/_agent_tests/: test_agent_basic.py  test_agent_units.py
Exp4/generation_s1/Glances/glances/: cli.py  csvout.py  errors.py  metrics.py
Exp4/generation_s3/Fail2ban/: _m4_contract.txt  _m4_contract_raw.txt  _m4_raw_model_output.txt  pyproject.toml
Exp4/generation_s3/Fail2ban/config/: jail.conf
Exp4/generation_s3/Fail2ban/fail2ban/: __init__.py
Exp4/generation_s3/Fail2ban/fail2ban/server/: __init__.py  filter.py  jail.py
Exp4/generation_s3/Folium/: README.md  _m4_contract.txt  _m4_contract_raw.txt  _m4_raw_model_output.txt  pyproject.toml
Exp4/generation_s3/Folium/folium/: __init__.py  features.py  map.py  raster_layers.py  template.py  utilities.py
Exp4/generation_s3/Folium/folium/plugins/: __init__.py  marker_cluster.py
Exp4/generation_s3/Glances/: README.md  _m4_contract.txt  _m4_contract_raw.txt  _m4_raw_model_output.txt  pyproject.toml
Exp4/generation_s3/Glances/glances/: __init__.py  __main__.py  cli.py  csvout.py  errors.py  monitor.py
Exp4/results_s1/: Astral_results.yaml  Cachetools_results.yaml  Celery_results.yaml  Cmd2_results.yaml  Dataset_results.yaml  Fail2ban_results.yaml  Folium_results.yaml  Glances_results.yaml  Humanize_results.yaml  Lifelines_results.yaml  Loguru_results.yaml  Mailpile_results.yaml  Markdown_results.yaml  Mitmproxy_results.yaml  Mutagen_results.yaml  Pendulum_results.yaml  Petl_results.yaml  PyJWT_results.yaml  Pygments_results.yaml  SQLModel_results.yaml  Schedule_results.yaml  Slugify_results.yaml  (+10 more)
evaluation/: README.md  api_contract_extractor.py  confidence_experiments.py  evaluate_model_repo.py  import_gate.py  measure_generated.py  measure_reference.py  preflight_from_tests.py  run_all_benchmarks.py  run_all_benchmarks_m1.py  run_all_benchmarks_m2.py  run_all_benchmarks_m3.py  run_all_benchmarks_s3.py  run_benchmark.py  run_benchmark_m1.py  run_benchmark_m2.py  run_benchmark_s2.py  run_benchmark_s3.py  test_execution_flow.md
scripts/: run_all_reference.py
(+5004 files in other folders)
