[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fail2ban-min"
version = "0.1.0"
description = "Minimal offline-safe subset of Fail2Ban for regex matching and in-memory ban tracking."
requires-python = ">=3.10"
readme = "README.txt"

[tool.setuptools]
packages = ["fail2ban", "fail2ban.server"]

[tool.pytest.ini_options]
testpaths = ["_agent_tests"]