[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glances"
version = "0.1.0"
description = "Minimal cross-platform system monitoring tool with a subset of Glances CLI behavior"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools]
packages = ["glances"]

[tool.pytest.ini_options]
testpaths = ["_agent_tests"]