[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fail2ban-minimal"
version = "0.1.0"
description = "Minimal, safe-to-evaluate subset of Fail2Ban for offline regex matching."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fail2ban*"]