[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folium"
version = "0.0.0"
description = "Pure-Python minimal Folium-compatible Leaflet HTML generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["folium", "folium.plugins"]