[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glances"
version = "0.1.0"
description = "Minimal cross-platform system monitoring tool (CLI-compatible subset for tests)."
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Generated"}]

[tool.setuptools]
packages = ["glances"]