[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitmproxy"
version = "10.0.0"
description = "An interactive TLS-capable intercepting HTTP proxy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mitmproxy Project", email = "cortesi@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]

[project.scripts]
mitmdump = "mitmproxy.tools.main:mitmdump"
mitmproxy = "mitmproxy.tools.main:mitmproxy_console"
mitmweb = "mitmproxy.tools.main:mitmweb"

[project.urls]
Homepage = "https://mitmproxy.org"
Documentation = "https://docs.mitmproxy.org"
Repository = "https://github.com/mitmproxy/mitmproxy"