[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailpile-core-slice"
version = "0.1.0"
description = "A benchmark suite for a slice of Mailpile's core library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
]