[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glances"
version = "0.0.0"
description = "Minimal cross-platform system monitoring tool compatible with basic Glances CLI behaviors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://example.invalid/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]